Se añade opcion Tipo de Movimiento.
Se añade opcion Tipo de Movimiento al menu general.

--- a/src/Vista/FrmPrincipal.form
+++ b/src/Vista/FrmPrincipal.form
@@ -40,6 +40,14 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="MnuProveedoresActionPerformed"/>
               </Events>
             </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="MnuTiposdeMovimiento">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Tipos de Movimientos"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="MnuTiposdeMovimientoActionPerformed"/>
+              </Events>
+            </MenuItem>
           </SubComponents>
         </Menu>
         <Menu class="javax.swing.JMenu" name="MnuSalir">
