--- a/src/Vista/FrmUnidadDeMedida.form
+++ b/src/Vista/FrmUnidadDeMedida.form
@@ -34,8 +34,8 @@
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="btnGuardar" min="-2" max="-2" attributes="0"/>
                           <Component id="txtUnidadDeMedida" alignment="0" min="-2" pref="71" max="-2" attributes="0"/>
-                          <Component id="btnGuardar" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
